--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
         <div class="row">
+          <!-- Sidebar starts -->
             <div class="left-column">
                 <div class="sidebar">
                     <div class="logo">
@@ -59,6 +60,9 @@
                     </div>
                 </div>
             </div>
+            <!-- Sidebar ends -->
+
+            <!-- Home/center Starts -->
             <div class="center-column">
                 <div class="home">
                     <span class="home-container">
@@ -171,6 +175,10 @@
               <div class="tweets">
                 <div class="user-content">
                     <div class="user-details">
+                      <div class="heart-reaction">
+                        <svg viewBox="0 0 24 24" aria-hidden="true" class="r-1bwzh9t r-4qtqp9 r-yyyyoo r-10ptun7 r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1janqcz"><g><path d="M12 21.638h-.014C9.403 21.59 1.95 14.856 1.95 8.478c0-3.064 2.525-5.754 5.403-5.754 2.29 0 3.83 1.58 4.646 2.73.814-1.148 2.354-2.73 4.645-2.73 2.88 0 5.404 2.69 5.404 5.755 0 6.376-7.454 13.11-10.037 13.157H12z"></path></g></svg>
+                        <p>Rosina Mellow and Francina Makgakga  liked </p>
+                      </div>
                         <img class="user-profile-picture" src="https://news.mit.edu/sites/default/files/styles/news_article__image_gallery/public/images/202012/MIT-Coding-Brain-01-press_0.jpg?itok=JKoUflf8">
                         <span><strong class="user-twitter-name">Ninja</strong></span>
                         <span class="user-handle-name">@SamLee</span>
@@ -276,6 +284,9 @@
                </div>
               </div>
             </div>
+            <!-- Home/center ends -->
+
+            <!-- Trendbar starts -->
             <div class="right-column">
                <div class="search-box">
                 <svg viewBox="0 0 24 24" aria-hidden="true"><g><path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path></g></svg>
@@ -379,6 +390,7 @@
               </div>
         
             </div>
+            <!-- Trendbar ends -->
           </div>
 
    
